<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting...</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="com.crashlytics.android.build_id">a5dd2588-90cf-407a-b6dc-acbdc413dd29</string>
    <string name="appID">3246071985019124910</string>
    <string name="app_id">676426159085390</string>
    <string name="application_name">Laban Dictionary</string>
    <string name="desc_text">text</string>
    <string name="english_lang">English</string>
    <string name="vietnamese_lang">Tiếng Việt</string>
    <string name="search_label">Dictionary</string>
    <string name="search_hint">Type words</string>
    <string name="search_hint_short">Type words</string>
    <string name="camera_hint">Camera</string>
    <string name="inf_verbs_hint">Infinitive</string>
    <string name="sim_verbs_hint">Simple Past</string>
    <string name="par_verbs_hint">Past Part.</string>
    <string name="save_close_hint">Save and close</string>
    <string name="exit_hint">Exit</string>
    <string name="close_hint">Close</string>
    <string name="open_main_app">Open Laban Dictionary</string>
    <string name="empty" />
    <string name="setting_title_genaral">GENERAL SETTINGS</string>
    <string name="setting_title_display_lang">Language</string>
    <string name="setting_title_speech_method">Speech method</string>
    <string name="setting_title_textSize">Text size</string>
    <string name="setting_title_camera">CAMERA SETTINGS</string>
    <string name="setting_other">OTHER</string>
    <string name="setting_title_recog_lang">Recognize language</string>
    <string name="setting_title_recog_engine">OCR engine</string>
    <string name="setting_title_autofocus">Auto Focus</string>
    <string name="setting_title_beep">Capture sound</string>
    <string name="showcase_hint">Guide</string>
    <string name="about_hint">About</string>
    <string name="default_value_language_list_preference">eng</string>
    <string name="default_display_language_list_preference">vi</string>
    <string name="default_textSize_list_preference">m</string>
    <string name="default_speech_method_list_preference">hm</string>
    <string name="default_value_engine_list_preference">Tesseract</string>
    <string name="default_value_autofocus_preference">false</string>
    <string name="default_value_beep_preference">true</string>
    <string name="got_it">Got it</string>
    <string name="skip">Skip</string>
    <string name="home_guide_mess">Tap and hold search button to switch between Eng-Vie and Vie-Eng dictionaries</string>
    <string name="menu_guide_mess">You can download Eng-Eng and Synonyms dictionaries here</string>
    <string name="recent_guide_mess">Swipe right to left to delete a word from the list</string>
    <string name="no_camera_support_string">No devices are available! This feature requires rear camera.</string>
    <string name="camera_init_engines">Initializing character recognition engines for</string>
    <string name="title_please_wait">Please wait</string>
    <string name="camera_checking">Checking for data installation...</string>
    <string name="camera_downloading">Downloading recognition data for</string>
    <string name="camera_uncompressing">Uncompressing data for</string>
    <string name="camera_error_excard">Required external storage (such as an SD card) is unavailable for data storage.</string>
    <string name="camera_error_init">Could not initialize camera. Please try restarting a device.</string>
    <string name="camera_failed_ocr">Character recognition failed. Please try again.</string>
    <string name="message_downloading">Downloading database for</string>
    <string name="message_downloading_error">Network is unreachable - cannot download language data. Please enable network and restart this app.</string>
    <string name="message_perform_reg">Performing character recognition using</string>
    <string name="message_perform_reg_both">Performing character recognition using Cube and Tesseract...</string>
    <string name="message_script_detect">orientation and script detection</string>
    <string name="message_accept_download">Please download database from server. Do you agree?</string>
    <string name="db_moving_external_hint">Move data to external storage</string>
    <string name="item_verbs">Irregular verbs</string>
    <string name="item_settings">Settings</string>
    <string name="item_word_of_day">Word of the day</string>
    <string name="setting_text_s">Small</string>
    <string name="setting_text_m">Medium</string>
    <string name="setting_text_l">Large</string>
    <string name="setting_text_xl">Very Large</string>
    <string name="setting_move_int">Data in internal storage</string>
    <string name="setting_move_text">Move data to SDCARD</string>
    <string name="setting_about_title"><u>About Laban Dictionary</u></string>
    <string name="word_of_day_stop_notification">Stop notification</string>
    <string name="word_of_day_view_all">See all</string>
    <string name="store_no_connect1">No internet connection</string>
    <string name="store_no_connect2">Please turn on Wifi or mobile data.</string>
    <string name="store_try_again">TRY AGAIN</string>
    <string name="popup_update">Update</string>
    <string name="popup_remove">Remove</string>
    <string name="popup_active">Active</string>
</resources>