<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/dragView" android:background="@color/white" android:focusable="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <ImageView android:id="@id/back_to_previous" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" android:layout_centerVertical="true" />
        <com.vng.dict.view.NewRobotoTextView android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_settings" android:layout_toRightOf="@id/back_to_previous" android:layout_centerInParent="true" font="medium" />
    </RelativeLayout>
    <ScrollView android:orientation="vertical" android:id="@id/settings" android:background="@color/white" android:paddingLeft="@dimen/frame_left_parding" android:paddingTop="@dimen/frame_right_parding" android:paddingRight="@dimen/frame_right_parding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/dragView">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.vng.dict.view.NewRobotoTextView android:textSize="20.0sp" android:textColor="#ff3d3d3d" android:gravity="center_vertical" android:paddingLeft="@dimen/fragment_title_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_title_display_lang" font="medium" />
            <RadioGroup android:id="@id/setting_grLang" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:textColor="#ff000000" android:id="@id/setting_grLang_en" android:background="@drawable/selector_list" android:paddingLeft="@dimen/menu_item_padding_left" android:paddingRight="@dimen/menu_item_padding_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_item_spacing" android:button="@null" android:text="@string/english_lang" android:drawableRight="@drawable/radio_selector" android:drawablePadding="25.0dip" />
                <RadioButton android:textColor="#ff000000" android:id="@id/setting_grLang_vi" android:background="@drawable/selector_list" android:paddingLeft="@dimen/menu_item_padding_left" android:paddingRight="@dimen/menu_item_padding_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_item_spacing" android:button="@null" android:text="@string/vietnamese_lang" android:drawableRight="@drawable/radio_selector" android:drawablePadding="25.0dip" />
            </RadioGroup>
            <View android:background="@color/color_divider_preference" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
            <com.vng.dict.view.NewRobotoTextView android:textSize="20.0sp" android:textColor="#ff3d3d3d" android:gravity="center_vertical" android:paddingLeft="@dimen/fragment_title_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_title_textSize" font="medium" />
            <RadioGroup android:id="@id/setting_grText" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:textSize="@dimen/sum_font_size_s" android:textColor="#ff000000" android:id="@id/setting_grText_s" android:background="@drawable/selector_list" android:paddingLeft="@dimen/menu_item_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:paddingRight="@dimen/menu_item_padding_left" android:paddingBottom="@dimen/menu_item_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_item_spacing" android:button="@null" android:text="@string/setting_text_s" android:drawableRight="@drawable/radio_selector" android:drawablePadding="25.0dip" />
                <RadioButton android:textSize="@dimen/sum_font_size_m" android:textColor="#ff000000" android:id="@id/setting_grText_m" android:background="@drawable/selector_list" android:paddingLeft="@dimen/menu_item_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:paddingRight="@dimen/menu_item_padding_left" android:paddingBottom="@dimen/menu_item_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_item_spacing" android:button="@null" android:text="@string/setting_text_m" android:drawableRight="@drawable/radio_selector" android:drawablePadding="25.0dip" />
                <RadioButton android:textSize="@dimen/sum_font_size_l" android:textColor="#ff000000" android:id="@id/setting_grText_l" android:background="@drawable/selector_list" android:paddingLeft="@dimen/menu_item_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:paddingRight="@dimen/menu_item_padding_left" android:paddingBottom="@dimen/menu_item_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_item_spacing" android:button="@null" android:text="@string/setting_text_l" android:drawableRight="@drawable/radio_selector" android:drawablePadding="25.0dip" />
                <RadioButton android:textSize="@dimen/sum_font_size_vl" android:textColor="#ff000000" android:id="@id/setting_grText_xl" android:background="@drawable/selector_list" android:paddingLeft="@dimen/menu_item_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:paddingRight="@dimen/menu_item_padding_left" android:paddingBottom="@dimen/menu_item_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_item_spacing" android:button="@null" android:text="@string/setting_text_xl" android:drawableRight="@drawable/radio_selector" android:drawablePadding="25.0dip" />
            </RadioGroup>
            <View android:background="@color/color_divider_preference" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
            <com.vng.dict.view.NewRobotoTextView android:textSize="20.0sp" android:textColor="#ff3d3d3d" android:gravity="center_vertical" android:id="@id/setting_move_title" android:paddingLeft="@dimen/fragment_title_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_move_int" font="medium" />
            <Button android:textColor="#ff000000" android:id="@id/setting_move_data" android:background="@drawable/border" android:padding="10.0dip" android:paddingLeft="@dimen/fragment_title_padding_left" android:paddingTop="@dimen/menu_item_padding_top" android:paddingBottom="@dimen/fragment_title_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/setting_move_text" />
            <View android:background="@color/color_divider_preference" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
            <com.vng.dict.view.NewRobotoTextView android:textSize="15.0sp" android:textColor="@color/blue" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/setting_about" android:padding="10.0dip" android:paddingLeft="@dimen/fragment_title_padding_left" android:paddingTop="@dimen/fragment_title_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_about_title" font="medium" />
        </LinearLayout>
    </ScrollView>
    <View android:background="@drawable/above_shadow" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/dragView" />
</RelativeLayout>