<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/llpopup" android:background="@color/white" android:layout_width="200.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="left" android:id="@id/popup_update" android:background="@drawable/button_selector" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/popup_update" />
    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="left" android:id="@id/popup_status" android:background="@drawable/button_selector" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/popup_active" />
    <ImageView android:id="@id/divider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="left" android:id="@id/popup_remove" android:background="@drawable/button_selector" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/popup_remove" />
</LinearLayout>