<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/store" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ExpandableListView android:id="@id/lvDicts" android:background="@color/white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@android:color/transparent" android:cacheColorHint="@android:color/transparent" android:groupIndicator="@null" android:divider="#00000000" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/view_no_connection" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/store_iv_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_noconnection" />
        <TextView android:textColor="@color/black" android:id="@id/store_tv1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/store_no_connect1" />
        <TextView android:textColor="@color/black" android:id="@id/store_tv2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/store_no_connect2" />
        <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tryagain" android:background="@drawable/bg_tryagain" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/store_try_again" />
    </LinearLayout>
    <FrameLayout android:id="@id/flLoadingView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
        <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/progressBar1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
</RelativeLayout>